Add E2E scenarios